k8s/devteam-1/external-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-to-httpbin
spec:
  ports:
    - protocol: TCP
      port: 80
  type: ExternalName
  externalName: httpbin.org
