k8s/devteam-1/grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    konghq.com/protocols: grpc,grpcs
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - grpcbin.api.ping-fuji.com
      secretName: grpcbin-tls
  rules:
    - host: grcpbin.api.ping-fuji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grpcbin
                port:
                  number: 9001
