k8s/devteam-1/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - svc.mini.ping-fuji.com
        - echo.mini.ping-fuji.com
        - httpbin.mini.ping-fuji.com
      secretName: http-tls
  rules:
    ## Different paths routing to the same backend service
    - host: svc.mini.ping-fuji.com
      http:
        paths:
          - path: /echo1
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
          - path: /echo2
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

    ## Different host headers routing to different backend services
    - host: echo.mini.ping-fuji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80

    - host: httpbin.mini.ping-fuji.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-to-httpbin
                port:
                  number: 80
